# mentis

./: .editorconfig  Cargo.toml  Justfile  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.docker/: Dockerfile  docker-compose.yml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  GOVERNANCE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/core/: greeting.rs
tests/: integration_test.rs
