[package]
name = "hello_trunk"
version = "0.1.0"
edition = "2021"
description = "Production-ready Rust CLI following trunk-based development best practices."
license = "MIT"
repository = "https://github.com/your-org/hello_trunk"
readme = "README.md"
keywords = ["cli", "tracing", "template", "production", "devops"]
categories = ["command-line-utilities"]
rust-version = "1.75"

[lib]
name = "hello_trunk"
path = "src/lib.rs"

[[bin]]
name = "hello_trunk"
path = "src/main.rs"

[dependencies]
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

[package.metadata.docs.rs]
all-features = true